Spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,6 @@ footer {
   text-align: center;
   vertical-align: middle;
   line-height: 75px;
-  position: relative;
-  bottom: 0%;
 }
 
 .social-media-icon{
